<resources>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Application Strings -->
    <string name="app_name">Busqueda de Mercado Libre</string>
    <string name="welcome_image">Imagen de bienvenida de Meli</string>
    <string name="hello_user">Hola Samuel</string>
    <string name="mercado_puntos">Nivel 3- Mercado Puntos ></string>
    <string name="home">Inicio</string>
    <string name="search">Buscar</string>
    <string name="record">Historial</string>
    <string name="categories">Categorias</string>
    <string name="select_country">Cambiar Pais</string>
    <string name="about">Acerca de …</string>
    <string name="try_again">Intente de nuevo</string>
    <string name="choice_country">Escoje el pais</string>
    <string name="search_in_meli">Buscar en Mercado Libre</string>
    <string name="free_shipping">Envio gratis</string>
    <string name="large_text">
        "Acerca de…


Esta aplicación tiene como objetivo principal permitir al usuario realizar búsquedas de productos, y ver los detalles, tomando como modelo las búsquedas que realizamos en la App oficial de Meli o de la web, como ejercicio del Mobile Candidate.
Se intentó recrear a grandes rasgos el comportamiento y apariencia que normalmente se accede mediante la plataforma de búsquedas de Mercado Libre; conectándonos al API REST https://developers.mercadolibre.com.ar/es_ar/items-y-busquedas, donde podemos acceder a varios endpoints para realizar consultas específicas. Generando en tiempo de ejecución búsquedas por país sobre los productos de manera dinámica. Logrando realizar búsquedas de producto por Nombre y Categoria, asi mismo se incluyo un Historial de publicaciones vistas.

Desarrollado por SAMUEL ESTEPA
"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
