<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entities.menu.ui.MenuFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:paddingBottom="8dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="97dp"
        android:layout_height="87dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/home"
        android:src="@drawable/ic_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/countryFlag"
        android:layout_width="35dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/flag_brasil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toEndOf="@+id/hello_user"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteY="3dp" />

    <TextView
        android:id="@+id/hello_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/hello_user"
        android:textColor="#33691E"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/user_image"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mercado_puntos"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/mercado_puntos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/user_image"
        app:layout_constraintTop_toBottomOf="@+id/hello_user" />

    <Button
        android:id="@+id/home_button"
        style="@style/Widget.Theme.MeliSearch.MenuButtons"
        android:drawableLeft="@drawable/ic_home"
        android:text="@string/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

    <Button
        android:id="@+id/search_button"
        style="@style/Widget.Theme.MeliSearch.MenuButtons"
        android:drawableLeft="@drawable/ic_search"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_button" />

    <Button
        android:id="@+id/record_button"
        style="@style/Widget.Theme.MeliSearch.MenuButtons"
        android:drawableLeft="@drawable/ic_historial"
        android:text="@string/record"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button" />

    <Button
        android:id="@+id/categories_button"
        style="@style/Widget.Theme.MeliSearch.MenuButtons"
        android:drawableLeft="@drawable/ic_categories"
        android:text="@string/categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record_button" />

    <Button
        android:id="@+id/select_country_button"
        style="@style/Widget.Theme.MeliSearch.MenuButtons"
        android:drawableLeft="@drawable/ic_pin_address"
        android:text="@string/select_country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories_button" />

    <Button
        android:id="@+id/about_button"
        style="@style/Widget.Theme.MeliSearch.MenuButtons"
        android:drawableLeft="@drawable/ic_info"
        android:text="@string/about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_country_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
